Added register, and password hashing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,4 +13,4 @@ body{
     background: #7700ff;
     background: linear-gradient(45deg,rgba(119, 0, 255, 1) 0%, rgba(255, 0, 89, 1) 100%);
     color: white;
-}
+} */
