--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,15 @@
     opacity: 1;
     max-height: 40px;
 }
+
+.not-met{
+    color: #b04c4c;
+}
+.met{
+    color: #6aa86a;
+}
+
+.password-hint span:not(:last-child, :first-child)::after {
+    content: ",";
+    color: var(--bs-secondary-color);
+}
